#########################################################################
#  
#   Copyright (C) 2010 by Amlogic, Inc. All Rights Reserved.
# 
#   Description: the root Makefile.am for AUTOMAKE
# 
#   Author: tianyu.li
# 
##########################################################################

SUBDIRS=src test

INCLUDES=-I./inlcude

export INCLUDES

