#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([libbttv], [1.0.0], [amlogic])
AC_CONFIG_SRCDIR([src/ref_update_manager.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(libbttv, 1.0.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LIBTOOL

# Checks for libraries.
AC_PROG_RANLIB

AC_CHECK_LIB([xfer], [transfer_mgr_init], HAVE_XFER=yes, HAVE_XFER=no)

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h malloc.h memory.h stddef.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gethostbyname gettimeofday memmove memset strcasecmp strchr strdup strncasecmp strrchr strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
