##########################################################################
#  
#   Copyright (C) 2010 by Amlogic, Inc. All Rights Reserved.
# 
#   Description: the interface of Transfer Manager
# 
#   Author: Peifu Jiang
# 
##########################################################################

SUBDIRS=ixml src 
#tests 

#ACLOCAL_AMFLAGS=-I m4
INCLUDES=-I./include
export INCLUDES

EXTRA_DIST=./doc/TransferManagerAPI.doc \
		   ./xfer_lib.pro \
		   ./xfer_test.pro 
